scss/components/_components.previews.scss
.c-previews {
  margin-bottom: $inuit-global-spacing-unit;

  &__preview {
    border-radius: 2px;
    box-shadow: 0 1px 2px $colour-black-dividers;
    display: block;
    margin-bottom: $global-spacing-secondary;
    padding: $global-spacing-secondary;
    text-decoration: none;

    p {
      margin: 0;
      color: $colour-black-secondary-text;
    }

    &__desc {
      background: rgba($colour-white, .9);
      bottom: 0;
      font-size: 14px;
      left: 0;
      opacity: 0;
      overflow: hidden;
      padding: $global-spacing-secondary;
      position: absolute;
      right: 0;
      top: 0;
      transition: opacity .2s linear;
      z-index: 99;

      h4 { margin-bottom: $global-spacing-secondary; }

      h4,
      p { color: $colour-black-text; }
    }

    &:hover {
      .c-previews__preview__desc { opacity: 1; }
    }

    &__screenshot {
      margin-bottom: $global-spacing-secondary;
      overflow: hidden;
      position: relative;

      &::before {
        content: '';
        display: block;
        padding-bottom: 75%;
      }

      img {
        bottom: 0;
        left: 0;
        position: absolute;
        right: 0;
        top: 0;
      }
    }

  }

}

